Change edge_annotations to have the component definition in the path and document it
